--- a/Reports/patientHistoryFILA.jrxml
+++ b/Reports/patientHistoryFILA.jrxml
@@ -11,7 +11,7 @@
 	<parameter name="patientId" class="java.lang.String">
 		<defaultValueExpression><![CDATA["11010601/10/0996"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="path" class="java.lang.String" isForPrompting="false">
+	<parameter name="path" class="java.lang.String">
 		<defaultValueExpression><![CDATA["C:\\Users\\colaco\\Documents\\Projectos CCS\\Sub\\idart\\idart\\Reports"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pharmacist1" class="java.lang.String" isForPrompting="false"/>
@@ -246,7 +246,7 @@ Levantamento de ARVs (FILA)]]></text>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{apelido}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="st_sex" mode="Opaque" x="277" y="50" width="64" height="18" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="st_sex" mode="Opaque" x="247" y="50" width="60" height="18" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -259,7 +259,7 @@ Levantamento de ARVs (FILA)]]></text>
 				<text><![CDATA[Contacto :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="st_sex" mode="Opaque" x="273" y="69" width="64" height="18" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="st_sex" mode="Opaque" x="244" y="69" width="64" height="18" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -288,12 +288,12 @@ Levantamento de ARVs (FILA)]]></text>
 				<text><![CDATA[Nome :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="343" y="50" width="189" height="18"/>
+				<reportElement x="311" y="50" width="189" height="18"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{cellno}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="343" y="71" width="189" height="18"/>
+				<reportElement x="312" y="70" width="189" height="18"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{endereco}]]></textFieldExpression>
 			</textField>
