--- a/Reports/MmiaReportMISAU.jrxml
+++ b/Reports/MmiaReportMISAU.jrxml
@@ -8,22 +8,22 @@
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
-	<style name="table" isDefault="false">
+	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TH" isDefault="false" mode="Opaque" backcolor="#F0F8FF">
+	<style name="table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_CH" isDefault="false" mode="Opaque" backcolor="#BFE1FF">
+	<style name="table_CH" mode="Opaque" backcolor="#BFE1FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TD" isDefault="false" mode="Opaque" backcolor="#FFFFFF">
+	<style name="table_TD" mode="Opaque" backcolor="#FFFFFF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
@@ -225,7 +225,7 @@ order by d.pediatric asc]]>
 					</graphicElement>
 				</line>
 				<line>
-					<reportElement x="0" y="28" width="314" height="1"/>
+					<reportElement x="0" y="28" width="216" height="1"/>
 					<graphicElement>
 						<pen lineWidth="2.0"/>
 					</graphicElement>
@@ -238,7 +238,7 @@ order by d.pediatric asc]]>
 					<text><![CDATA[REGIME TERAPEUTICO]]></text>
 				</staticText>
 				<line>
-					<reportElement key="line-3" mode="Opaque" x="314" y="-31" width="1" height="61" forecolor="#000000" backcolor="#000000"/>
+					<reportElement key="line-3" mode="Opaque" x="314" y="-31" width="1" height="32" forecolor="#000000" backcolor="#000000"/>
 					<graphicElement fill="Solid">
 						<pen lineWidth="2.0"/>
 					</graphicElement>
@@ -500,11 +500,6 @@ order by d.pediatric asc]]>
 						<pen lineWidth="2.0"/>
 					</graphicElement>
 				</line>
-				<staticText>
-					<reportElement x="219" y="3" width="95" height="27"/>
-					<textElement/>
-					<text><![CDATA[Total de doentes maior que 1 Mes]]></text>
-				</staticText>
 				<textField>
 					<reportElement x="464" y="121" width="58" height="20"/>
 					<textElement verticalAlignment="Middle"/>
