--- a/Reports/patientHistoryFILAGeral.jrxml
+++ b/Reports/patientHistoryFILAGeral.jrxml
@@ -32,7 +32,7 @@ p.firstnames as nome,
 p.lastname as apelido,
 c.clinicName as clinic,
 p.cellphone as cellno,
-min(e.startdate) as datavisita,
+min(pr.date) as datavisita,
 date_part('year',age(p.dateofbirth)) as age,
 (p.address1 ||' '||p.address2||' '||p.address3) as endereco,
 CASE WHEN (p.sex = 'F' OR p.sex = 'f')  THEN 'Feminino'
@@ -42,10 +42,10 @@ END as sex
 from Patient as p
 inner join clinic as c on c.id = p.clinic
 inner join patientidentifier pi on pi.patient_id =p.id
-inner join episode as e on e.patient = p.id
-where e.startdate between $P{dataInicio} and $P{dataFim}
-group by 1,2,3,4,5,e.startdate
-order by e.startdate,pi.value]]>
+inner join prescription as pr on pr.patient = p.id
+where pr.date between $P{dataInicio} and $P{dataFim}
+group by 1,2,3,4,5,pr.date
+order by pr.date,pi.value]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer"/>
 	<field name="patientid" class="java.lang.String"/>
