--- a/Reports/RelatorioAbandonosFaltososRETChamadas.jrxml
+++ b/Reports/RelatorioAbandonosFaltososRETChamadas.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.4641000000000006"/>
-	<property name="ireport.x" value="23"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
@@ -59,7 +59,7 @@ where id = $P{clinicid}]]>
 	<title>
 		<band height="108" splitType="Stretch">
 			<staticText>
-				<reportElement key="st_heading" mode="Transparent" x="152" y="21" width="299" height="39" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="st_heading" mode="Transparent" x="120" y="21" width="331" height="39" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -69,7 +69,7 @@ where id = $P{clinicid}]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" lineSpacing="Single">
 					<font fontName="Arial" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica-Bold" pdfEncoding="CP1252" isPdfEmbedded="false"/>
 				</textElement>
-				<text><![CDATA[Relatório para Chamadas Pacientes Faltosos ao Levantamento de ARV's em Dispensa Trimestral]]></text>
+				<text><![CDATA[Relatório para Chamadas de Novos Inícios Faltosos ao Levantamento de ARV's - RETENÇÂO 33 DIAS]]></text>
 			</staticText>
 			<textField pattern="" isBlankWhenNull="false">
 				<reportElement key="tf_facilityName" mode="Opaque" x="505" y="28" width="119" height="15" forecolor="#000000" backcolor="#FFFFFF"/>
@@ -408,7 +408,7 @@ ao TARV
 					<subreportParameterExpression><![CDATA[$P{minDays}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression class="java.lang.String"><![CDATA[($P{path} + java.io.File.separator+ "RelatorioSubAbandonosFaltososPersonalizadoDTChamadas.jasper")]]></subreportExpression>
+				<subreportExpression class="java.lang.String"><![CDATA[($P{path} + java.io.File.separator+ "RelatorioSubAbandonosFaltososPersonalizadoRETChamadas.jasper")]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
