--- a/Reports/RelatorioSubAbandonosFaltososNaDT.jrxml
+++ b/Reports/RelatorioSubAbandonosFaltososNaDT.jrxml
@@ -13,10 +13,10 @@
 		<defaultValueExpression><![CDATA[new Integer(2)]]></defaultValueExpression>
 	</parameter>
 	<parameter name="maxDays" class="java.lang.Integer" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Integer(10)]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new Integer(4)]]></defaultValueExpression>
 	</parameter>
 	<parameter name="minDays" class="java.lang.Integer" isForPrompting="false">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[new Integer(0)]]></defaultValueExpression>
 	</parameter>
 	<parameter name="date" class="java.util.Date">
 		<defaultValueExpression><![CDATA[new Date("01/01/2018")]]></defaultValueExpression>
@@ -67,7 +67,7 @@ and pi.value = pat.patientid
 and idt.id = pi.type_id
 and $P{clinicid} = pat.clinic
 and app.appointmentDate is not null
-and (app.appointmentDate::date) between ($P{date}::date - INTERVAL '90 days') and $P{date}::date
+and ($P{date}::date - app.appointmentDate::date) between $P{minDays} and $P{maxDays}
 and exists (select prescription.id
 from prescription
 where prescription.patient = pat.id
