--- a/Reports/HistoricoLevantamentos.jrxml
+++ b/Reports/HistoricoLevantamentos.jrxml
@@ -64,7 +64,16 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select distinct p.patientId as nid,
+		<![CDATA[select distinct CASE
+    WHEN pr.gaac = 'T' THEN ' GAAC - ' ||p.patientId
+    WHEN pr.af = 'T' THEN ' AF - ' ||p.patientId
+    WHEN pr.ca = 'T' THEN ' CA - ' ||p.patientId
+    WHEN pr.ptv = 'T' THEN ' SMI - ' ||p.patientId
+    WHEN pr.ccr = 'T' THEN ' SMI - ' ||p.patientId
+    WHEN pr.saaj = 'T' THEN ' SAAJ - ' ||p.patientId
+    WHEN pr.tb = 'T' THEN ' TB - ' ||p.patientId
+    ELSE p.patientId
+  END as nid,
 p.firstnames ||' '||p.lastname as nome,
 extract(year FROM age(current_date, p.dateofbirth))::integer as idade,
 c.clinicname as facilityName,
@@ -84,7 +93,7 @@ inner join regimeterapeutico rt on rt.regimeid = pr.regimeid
 inner join linhat lt on lt.linhaid = pr.linhaid
 inner join packagedruginfotmp pdit on pdit.packageddrug = packdrug.id
 where pack.pickupdate >= $P{date}
-AND pack.pickupdate <= $P{dateEnd}
+AND pack.pickupdate < ($P{dateEnd}::date + INTERVAL '1 day')
 AND pdit.dispensedate = pack.pickupdate
 AND (pr.reasonforupdate = $P{inicia} OR  pr.reasonforupdate = $P{manter}  OR pr.reasonforupdate = $P{altera})
 group by 1,2,3,4,5,6,7,8,10,11,12
@@ -188,7 +197,7 @@ order by pack.pickupdate asc]]>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="st_drug" mode="Opaque" x="120" y="104" width="170" height="30" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="st_drug" mode="Opaque" x="132" y="104" width="158" height="30" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -327,13 +336,13 @@ order by pack.pickupdate asc]]>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-2" mode="Opaque" x="116" y="100" width="1" height="38" forecolor="#000000" backcolor="#000000"/>
+				<reportElement key="line-2" mode="Opaque" x="129" y="100" width="1" height="38" forecolor="#000000" backcolor="#000000"/>
 				<graphicElement fill="Solid">
 					<pen lineWidth="2.0"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="st_drug" mode="Opaque" x="31" y="104" width="85" height="30" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="st_drug" mode="Opaque" x="47" y="105" width="71" height="30" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -524,7 +533,7 @@ order by pack.pickupdate asc]]>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement key="line-8" mode="Opaque" x="116" y="-3" width="1" height="26" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement key="line-8" mode="Opaque" x="129" y="-3" width="1" height="26" forecolor="#000000" backcolor="#FFFFFF"/>
 				<graphicElement fill="Solid">
 					<pen lineWidth="2.0" lineStyle="Solid"/>
 				</graphicElement>
@@ -597,14 +606,14 @@ order by pack.pickupdate asc]]>
 				</graphicElement>
 			</line>
 			<textField>
-				<reportElement x="31" y="0" width="85" height="20"/>
+				<reportElement x="31" y="0" width="98" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="6"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{nid}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="120" y="1" width="156" height="20"/>
+				<reportElement x="132" y="1" width="158" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
