--- a/Reports/pacientesemsegundalinhaAvaliacao.jrxml
+++ b/Reports/pacientesemsegundalinhaAvaliacao.jrxml
@@ -3,15 +3,15 @@
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.6105100000000019"/>
-	<property name="ireport.x" value="326"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<import value="net.sf.jasperreports.engine.*"/>
-	<import value="org.apache.commons.lang.time.*"/>
 	<import value="java.util.*"/>
+	<import value="org.apache.commons.lang.time.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
-	<parameter name="path" class="java.lang.String" isForPrompting="false">
+	<parameter name="path" class="java.lang.String">
 		<parameterDescription><![CDATA[Path for the report files]]></parameterDescription>
-		<defaultValueExpression><![CDATA["C:\\Users\\colaco\\Documents\\Projectos CCS\\Sub\\idart\\idart\\Reports"]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="clinic" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Masiphumelele"]]></defaultValueExpression>
