--- a/Reports/MmiaPediatricReport.jrxml
+++ b/Reports/MmiaPediatricReport.jrxml
@@ -8,22 +8,22 @@
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
-	<style name="table" isDefault="false">
+	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TH" isDefault="false" mode="Opaque" backcolor="#F0F8FF">
+	<style name="table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_CH" isDefault="false" mode="Opaque" backcolor="#BFE1FF">
+	<style name="table_CH" mode="Opaque" backcolor="#BFE1FF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TD" isDefault="false" mode="Opaque" backcolor="#FFFFFF">
+	<style name="table_TD" mode="Opaque" backcolor="#FFFFFF">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
@@ -54,8 +54,8 @@
 	<parameter name="pharmacist2" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="monthStart" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="monthEnd" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["C:\\eclipse.OLD\\wp\\idart\\Reports\\"]]></defaultValueExpression>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="dateEnd" class="java.util.Date"/>
 	<queryString>
@@ -109,20 +109,20 @@ order by d.pediatric asc]]>
 				<subreportParameter name="ATC">
 					<subreportParameterExpression><![CDATA[$F{packsize2}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="stockCenterId">
-					<subreportParameterExpression><![CDATA[$P{stockCenterId}]]></subreportParameterExpression>
+				<subreportParameter name="formlanguage1">
+					<subreportParameterExpression><![CDATA[$F{formlanguage12}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="packsize">
 					<subreportParameterExpression><![CDATA[$F{packsize2}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="formlanguage1">
-					<subreportParameterExpression><![CDATA[$F{formlanguage12}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="atccode">
-					<subreportParameterExpression><![CDATA[$F{atccode2}]]></subreportParameterExpression>
+				<subreportParameter name="stockCenterId">
+					<subreportParameterExpression><![CDATA[$P{stockCenterId}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="name">
 					<subreportParameterExpression><![CDATA[$F{name2}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="atccode">
+					<subreportParameterExpression><![CDATA[$F{atccode2}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="path">
 					<subreportParameterExpression><![CDATA[$P{path}]]></subreportParameterExpression>
@@ -134,7 +134,7 @@ order by d.pediatric asc]]>
 					<subreportParameterExpression><![CDATA[$P{monthStart}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression class="java.lang.String"><![CDATA[($P{SUBREPORT_DIR}+"MmiaReport_batch.jasper")]]></subreportExpression>
+				<subreportExpression class="java.lang.String"><![CDATA[($P{path} + java.io.File.separator+ "MmiaReport_batch.jasper")]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
