--- a/Reports/RelatorioSubAbandonosFaltososNaDT.jrxml
+++ b/Reports/RelatorioSubAbandonosFaltososNaDT.jrxml
@@ -26,20 +26,22 @@
 	</parameter>
 	<parameter name="path" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select distinct
+		<![CDATA[select
 pat.patientid as patID,
-(pat.lastname||', '|| pat.firstnames) as name,
+(pat.firstnames||', '|| pat.lastname) as name,
  pat.nextofkinname as supportername,
 pat.nextofkinphone as supporterphone,
 pat.cellphone as cellno,
-date_part('year',age(pat.dateofbirth)) as age,
+pat.homephone as homeno,
+pat.workphone as workno,
+date_part('year',age(pat.dateofbirth))::Integer as age,
 app.appointmentDate::date as dateexpected,
 ($P{date}::date-app.appointmentDate::date)::integer as dayssinceexpected,
 CASE
-    WHEN (($P{date}::date-app.appointmentDate::date) > 59 AND app.visitdate::date IS NULL) THEN (app.appointmentDate::date + INTERVAL '60 days')
+    WHEN (($P{date}::date-app.appointmentDate::date) > 59 AND app.visitdate::date IS NULL) THEN (app.appointmentDate::date + INTERVAL '61 days')
     ELSE
 	CASE
-	    WHEN ((app.appointmentDate::date - app.visitdate::date) > 60) THEN (app.appointmentDate::date + INTERVAL '60 days')
+	    WHEN ((app.appointmentDate::date - app.visitdate::date) > 61) THEN (app.appointmentDate::date + INTERVAL '61 days')
               ELSE null
     	END
 END
@@ -60,30 +62,35 @@ else ',' || pat.address3
 end
 as address,
 max(app.appointmentDate) as ultimaData
-from patient as pat, appointment as app, patientidentifier as pi,identifiertype as idt
+from patient as pat, appointment as app, patientidentifier as pi,identifiertype as idt, prescription as presc
 where app.patient = pat.id
+and presc.patient = pat.id
+and presc."current" = 'T'
+and presc.dispensatrimestral = 1
 and idt.name = 'NID'
 and pi.value = pat.patientid
 and idt.id = pi.type_id
 and $P{clinicid} = pat.clinic
 and app.appointmentDate is not null
-and ($P{date}::date - app.appointmentDate::date) between $P{minDays} and $P{maxDays}
+and (app.visitdate::date is null)
+and (app.appointmentDate::date < $P{date}::date and ($P{date}::date - app.appointmentDate::date) between $P{minDays} and $P{maxDays})
 and exists (select prescription.id
 from prescription
 where prescription.patient = pat.id
-and prescription.dispensatrimestral = 1
 and (($P{date} between prescription.date and prescription.endDate)or(($P{date} > prescription.date)) and (prescription.endDate is null)))
 and exists (select id from episode where episode.patient = pat.id
 and (($P{date} between episode.startdate and episode.stopdate)or(($P{date} > episode.startdate)) and (episode.stopdate is null)))
-group by 1,2,3,4,5,6,7,8,9,10,11
-order by dayssinceexpected]]>
+group by 1,2,3,4,5,6,7,8,9,10,11,12,13
+order by age asc]]>
 	</queryString>
 	<field name="patid" class="java.lang.String"/>
 	<field name="name" class="java.lang.String"/>
 	<field name="supportername" class="java.lang.String"/>
 	<field name="supporterphone" class="java.lang.String"/>
 	<field name="cellno" class="java.lang.String"/>
-	<field name="age" class="java.lang.Double"/>
+	<field name="homeno" class="java.lang.String"/>
+	<field name="workno" class="java.lang.String"/>
+	<field name="age" class="java.lang.Integer"/>
 	<field name="dateexpected" class="java.sql.Date"/>
 	<field name="dayssinceexpected" class="java.lang.Integer"/>
 	<field name="datelostfollowup" class="java.sql.Timestamp"/>
